fixed z-index issue

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 /**********************************************
 Root variables
 **********************************************/
+/* @import url(/css/root.css); */
 :root {
 	--clr-white-actual: #fff;
 	--clr-white: #fef7f2;
@@ -37,6 +38,7 @@ Root variables
 /**********************************************
 Global styles
 **********************************************/
+/* @import url(/css/reset.css); */
 /* ----------Resets---------- */
 /* Box sizing rules -- Suggested by Andy Bell - https://andy-bell.co.uk/a-modern-css-reset/ */
 *,
@@ -104,6 +106,7 @@ nav ul li {
 
 /* ----------Sections---------- */
 
+/* @import url(/css/globalSections.css); */
 header,
 main,
 footer {
@@ -221,7 +224,6 @@ section h2 {
 .breadcrumbs {
 	background-color: var(--clr-pink);
 	font-family: var(--ff-subHeader);
-	z-index: 1;
 	width: 100%;
 	margin-top: -0.5rem;
 	padding: 1rem 0 0.5rem 0;
@@ -295,10 +297,6 @@ section h2 {
 
 .relative {
 	position: relative;
-}
-
-.sticky {
-	position: sticky;
 }
 
 .float-right {
@@ -418,7 +416,6 @@ section h2 {
 /* ----------Hero---------- */
 .hero--img {
 	position: relative;
-	z-index: 2;
 	background-size: cover;
 	margin-top: -3.7rem;
 	border-radius: 0 0 15px 15px;
@@ -519,6 +516,7 @@ section h2 {
 #nav-main,
 #nav-toggle {
 	display: none;
+	z-index: 50;
 }
 
 #nav-toggle:checked ~ #nav-main {
@@ -549,7 +547,7 @@ section h2 {
 /* Divider generated by: https://www.shapedivider.app/ (code modified to suit design) */
 .divider-top {
 	position: relative;
-	z-index: 3;
+	z-index: 100;
 	margin-top: -1px;
 	overflow: hidden;
 	line-height: 0;
